# AuComputerScienceTest

./: CMakeLists.txt  LICENSE  README.md  common.h  main.c
algorithm_datastructure/graph/: graph.c  graph.h
algorithm_datastructure/list/: linkedlist.c  linkedlist.h  linkedlist.h.c  seqlist.c  seqlist.h
algorithm_datastructure/list/algorithm_datastructure/list/: seqlist.c  seqlist.h
algorithm_datastructure/queue/: queue.c  queue.h
algorithm_datastructure/stack/: stack.c  stack.h
algorithm_datastructure/tree/: tree.c  tree.h
